fixed horrors in the UserService, also made working ORM for user and guests with tests to all of the units plus AT